freetype sanity checker has incorrect main() declaration

XMLWordPrintable

    • b17
    • generic
    • generic

        Warning message from Fedora 9 gcc 4.3 on a bad main declaration in the freetype sanity checker. So this fix just cleans up the sanity checks.

        Fix trivial:

        diff --git a/make/tools/freetypecheck/freetypecheck.c b/make/tools/freetypecheck/freetypecheck.c
        --- a/make/tools/freetypecheck/freetypecheck.c
        +++ b/make/tools/freetypecheck/freetypecheck.c
        @@ -32,7 +32,7 @@
         #define QUOTEMACRO(x) QUOTEME(x)
         #define QUOTEME(x) #x
         
        -int main(char** argv, int argc) {
        +int main(int argc, char** argv) {
            char v[50];
            FT_Int major, minor, patch;
            FT_Library library;

              Assignee:
              Kelly Ohair (Inactive)
              Reporter:
              Kelly Ohair (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: