6839117: freetype sanity checker has incorrect main() declaration Reviewed-by: darcy